Undo previous wrapping fix

--- a/src/css/mathspace/math.less
+++ b/src/css/mathspace/math.less
@@ -14,12 +14,6 @@
 
 
 .mq-math-mode {
-  .mq-non-leaf {
-    // Prevent a bug that occurs on Windows Chrome at non-100% zoom levels, where the
-    // content inside nodes like fractions, roots, etc. would be wrapped
-    white-space: nowrap;
-  }
-
   .mq-binary-operator {
     white-space: pre-wrap;  // MaThSpaCE haCK: Text wrapping
   }
